Cambios en index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Texto HTML
+<html>
+    <heah>
+        <meta charset="utf-8">
+        <title>Primera pagina</title>
+    </head>
+    <body>
+        <h1>Primera pagina</h1>
+        <p>Esta es la primera pagina</p>
+    </body>
+</html>
